Got charities showing in the Action View Controller, but still having trouble with stupid race conditions!

--- a/DoSomethingAction/Info.plist
+++ b/DoSomethingAction/Info.plist
@@ -24,6 +24,8 @@
 	<string>1</string>
 	<key>NSExtension</key>
 	<dict>
+		<key>NSExtensionActionWantsFullScreenPresentation</key>
+		<true/>
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>NSExtensionActivationRule</key>
